assets/css/style.css
html, body {
    height: 100%;
    background-color: #507dbc; 
}
 
a {
    text-decoration: none;
}

.header {
    font-weight: 500;
    background-color: #858ae3;
    height: fit-content;
    padding: 1rem;
    box-shadow: 0 0 5px black;
}

.letter-btn {
    padding: 0;
    margin: 1px;
    height: 42px;
    width: 42px;
}

#btns {
    display: table;
    margin: 0 auto;
    height: fit-content;
    align-items: center;
}

#game {
    display: table;
    font-size: 42px;
    margin: 2rem auto;
}

footer {
    background-color: #858ae3;;
    height: 100px;
    position: absolute;
    bottom: 0;
}

.signature {
    margin-top: 40px;
}

@media (min-width: 768px) {
    .letter-btn {
        height: 80px;
        width: 80px;
        font-size: 2rem;
        margin: 5px;
    }
}

